<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsperationHome">

    <EditText
        android:id="@+id/enter_inspiration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_inspiration"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="45dp"
        tools:layout_conversion_absoluteWidth="parent" />

    <ImageView
        android:id="@+id/inspiration_thumbnail"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:src="@android:drawable/gallery_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_hashtag"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        tools:layout_conversion_absoluteHeight="425dp"
        tools:layout_conversion_absoluteWidth="parent" />

    <Button
        android:id="@+id/take_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inspiration_thumbnail"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="parent" />

    <EditText
        android:id="@+id/enter_hashtag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_hashtag"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_inspiration"
        tools:layout_conversion_absoluteHeight="45dp"
        tools:layout_conversion_absoluteWidth="parent" />

    <Button
        android:id="@+id/view_inspiration_list_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_inspiration_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/save_inspiration_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_inspiration_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_inspiration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_inspiration_list_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>